# lis-2022

./: .gitignore  .ocamlformat  Makefile  Questions.md  README.md  STYLE.md  dune-project  lis2022.opam  package.json
.github/workflows/: build.yml
esy.lock/: index.json
lib/: ast.ml  config.ml  config_monad.ml  configuration.ml  cpu_mode.ml  dune  error.ml  halt_error.ml  instr.ml  instructions.ml  interrupt_logic.ml  io_device.ml  layout.ml  mac.ml  memory.ml  native.ml  register_file.ml  semantics.ml  serialization.ml  types.ml  types.mli
test/: dune  lis2022.ml
test/qcheck/: TODO.md  dune  enclave_map_test.ml  generators.ml  instructions_test.ml  lis2022.ml  mac_test.ml  memory_test.ml  registers_test.ml  runner.ml  security_test.ml  semantics_test.ml  serialization_test.ml
test/unit/: configuration_test.ml  dune  io_devices_test.ml  lis2022.ml  lis2022_unit.ml
